# NFC_Door

./: .gitignore  .gitmodules  AES.cpp  AES.h  Android.cpp  Android.h  CMakeLists.txt  Desfire.cpp  Desfire.h  NFC_Door.ino  NetworkClient.cpp  NetworkClient.h  NetworkManager.cpp  NetworkManager.h  Utils.cpp  Utils.h  sequenz_reader.md  sequenz_write.md  server_functions.md
Reader/: deploy.ps1
Reader/data/: config.json
Writer/: deploy.ps1
Writer/data/fs/css/: index.css
Writer/data/fs/js/views/: AbstractView.js  ChipOverview.js  ChipSearch.js
data/: config.json  index.html
data/fs/css/: index.css
data/fs/js/: index.js
data/fs/js/views/: ChipCreated.js  ChipCreation.js  ChipSearch.js  CreationFail.js  CreationOk.js  Homepage.js  NewChip.js
src/: NFC_Reader.cpp  NFC_Reader.h  NetworkClient.cpp  NetworkManager.cpp
wiki/: wiki.txt
